HFJ-1371 - Make sure copyright selector within background selector does not overflow.

--- a/styles/bg-selector.css
+++ b/styles/bg-selector.css
@@ -8,6 +8,10 @@
   display: block;
 }
 
+.h5p-bg-selector .field.select select {
+  max-width: 100%;
+}
+
 .h5peditor button.h5p-background-selector-reset {
   display: none;
   font-size: 1em;
